// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSON imports > babel > transforms example test case: browser-current-esm > esm/index-browser-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-current-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-current-lib > lib/index-browser-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-current-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-current-umd > umd/index-browser-current-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.keys = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  const data = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  };

  // @ts-expect-error resolveJsonModule is not on
  const keys = _exports.keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-current-umd.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-experimental-esm > esm/index-browser-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-experimental-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-experimental-lib > lib/index-browser-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-experimental-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-experimental-umd > umd/index-browser-experimental-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.keys = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  const data = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  };

  // @ts-expect-error resolveJsonModule is not on
  const keys = _exports.keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-legacy-esm > esm/index-browser-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

var data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
var keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-legacy-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-legacy-lib > lib/index-browser-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

var data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
var keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-legacy-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-legacy-umd > umd/index-browser-legacy-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.keys = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  var data = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  };

  // @ts-expect-error resolveJsonModule is not on
  var keys = _exports.keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-stable-esm > esm/index-browser-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-stable-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-stable-lib > lib/index-browser-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-stable-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: browser-stable-umd > umd/index-browser-stable-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.keys = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  const data = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  };

  // @ts-expect-error resolveJsonModule is not on
  const keys = _exports.keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-stable-umd.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: electron-current-esm > esm/index-electron-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-electron-current-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: electron-current-lib > lib/index-electron-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-electron-current-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: electron-experimental-esm > esm/index-electron-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-electron-experimental-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: electron-experimental-lib > lib/index-electron-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-electron-experimental-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: electron-legacy-esm > esm/index-electron-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-electron-legacy-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: electron-legacy-lib > lib/index-electron-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-electron-legacy-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: electron-stable-esm > esm/index-electron-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-electron-stable-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: electron-stable-lib > lib/index-electron-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-electron-stable-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: native-current-esm > esm/index-native-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-native-current-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: native-current-lib > lib/index-native-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-current-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: native-experimental-esm > esm/index-native-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-native-experimental-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: native-experimental-lib > lib/index-native-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-experimental-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: native-legacy-esm > esm/index-native-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-native-legacy-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: native-legacy-lib > lib/index-native-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-legacy-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: native-stable-esm > esm/index-native-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-native-stable-esm.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: native-stable-lib > lib/index-native-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-stable-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { keys } = data;"
`;

exports[`JSON imports > babel > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { keys } = data;"
`;

exports[`JSON imports > babel > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { keys } = data;"
`;

exports[`JSON imports > babel > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { keys } = data;"
`;

exports[`JSON imports > babel > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`JSON imports > babel > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};

// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-current-esm > esm/index-browser-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-current-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-current-lib > lib/index-browser-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-current-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-current-umd > umd/index-browser-current-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    Object.defineProperty(exports, "keys", {
        enumerable: true,
        get: function() {
            return keys;
        }
    });
    const data = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    // @ts-expect-error resolveJsonModule is not on
    const keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-current-umd.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-experimental-esm > esm/index-browser-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-experimental-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-experimental-lib > lib/index-browser-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-experimental-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-experimental-umd > umd/index-browser-experimental-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    Object.defineProperty(exports, "keys", {
        enumerable: true,
        get: function() {
            return keys;
        }
    });
    const data = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    // @ts-expect-error resolveJsonModule is not on
    const keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-legacy-esm > esm/index-browser-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
var keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-legacy-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-legacy-lib > lib/index-browser-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
var data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
var keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-legacy-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-legacy-umd > umd/index-browser-legacy-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    Object.defineProperty(exports, "keys", {
        enumerable: true,
        get: function() {
            return keys;
        }
    });
    var data = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    // @ts-expect-error resolveJsonModule is not on
    var keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-stable-esm > esm/index-browser-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-stable-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-stable-lib > lib/index-browser-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-stable-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: browser-stable-umd > umd/index-browser-stable-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    Object.defineProperty(exports, "keys", {
        enumerable: true,
        get: function() {
            return keys;
        }
    });
    const data = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    // @ts-expect-error resolveJsonModule is not on
    const keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-stable-umd.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: electron-current-esm > esm/index-electron-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-electron-current-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: electron-current-lib > lib/index-electron-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-electron-current-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: electron-experimental-esm > esm/index-electron-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-electron-experimental-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: electron-experimental-lib > lib/index-electron-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-electron-experimental-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: electron-legacy-esm > esm/index-electron-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-electron-legacy-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: electron-legacy-lib > lib/index-electron-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-electron-legacy-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: electron-stable-esm > esm/index-electron-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-electron-stable-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: electron-stable-lib > lib/index-electron-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-electron-stable-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: native-current-esm > esm/index-native-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-native-current-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: native-current-lib > lib/index-native-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-current-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: native-experimental-esm > esm/index-native-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-native-experimental-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: native-experimental-lib > lib/index-native-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-experimental-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: native-legacy-esm > esm/index-native-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-native-legacy-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: native-legacy-lib > lib/index-native-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-legacy-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: native-stable-esm > esm/index-native-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-native-stable-esm.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: native-stable-lib > lib/index-native-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-stable-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { keys } = data;"
`;

exports[`JSON imports > swc > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { keys } = data;"
`;

exports[`JSON imports > swc > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { keys } = data;"
`;

exports[`JSON imports > swc > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { keys } = data;"
`;

exports[`JSON imports > swc > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
"use strict";
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`JSON imports > swc > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;
